# bins

./: .env.sample  .gitignore  Cargo.toml  README.md
src/: docker.rs  fritz.rs  main.rs  table.rs
tools/: fritz_mock_server.go
