[package]
name = "bins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.18.1"
clap = { version = "4.5.23", features = ["derive"] }
futures-util = "0.3.31"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["rt"] }
